<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lhJ-Yc-aKb">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Add Death View Controller-->
        <scene sceneID="2t2-LE-fZS">
            <objects>
                <viewController id="lhJ-Yc-aKb" customClass="AddDeathViewController" customModule="DeathNote" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="gG7-ok-FGu">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="LastName" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3RN-gd-uMy">
                                <rect key="frame" x="59" y="261" width="256" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="mpT-rl-DBU">
                                <rect key="frame" x="16" y="380" width="343" height="143"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="143" id="Mbf-UK-f61"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hwd-iO-bmc">
                                <rect key="frame" x="59" y="207" width="256" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultImage" translatesAutoresizingMaskIntoConstraints="NO" id="lbI-dS-85o">
                                <rect key="frame" x="16" y="20" width="167" height="167"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="lbI-dS-85o" secondAttribute="height" multiplier="60:60" id="ACm-zX-z9k"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="09a-Qe-cD9">
                                <rect key="frame" x="106" y="545" width="162" height="30"/>
                                <state key="normal" title="Kill"/>
                                <connections>
                                    <action selector="killAction:" destination="lhJ-Yc-aKb" eventType="touchUpInside" id="9Mu-dg-hk3"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Death Date" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U2H-sQ-2is">
                                <rect key="frame" x="59" y="315" width="256" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <action selector="dateAction:" destination="lhJ-Yc-aKb" eventType="editingDidBegin" id="3cV-pm-xp1"/>
                                </connections>
                            </textField>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="U2H-sQ-2is" firstAttribute="top" secondItem="3RN-gd-uMy" secondAttribute="bottom" constant="24" id="1o1-1x-MMz"/>
                            <constraint firstItem="09a-Qe-cD9" firstAttribute="top" secondItem="mpT-rl-DBU" secondAttribute="bottom" constant="22" id="4mr-a2-PpM"/>
                            <constraint firstItem="3RN-gd-uMy" firstAttribute="top" secondItem="hwd-iO-bmc" secondAttribute="bottom" constant="24" id="7hj-zb-3Ef"/>
                            <constraint firstItem="09a-Qe-cD9" firstAttribute="leading" secondItem="6Lr-2V-zH3" secondAttribute="leading" constant="106" id="DxA-XZ-RzD"/>
                            <constraint firstItem="6Lr-2V-zH3" firstAttribute="trailing" secondItem="09a-Qe-cD9" secondAttribute="trailing" constant="107" id="FZP-1c-OeX"/>
                            <constraint firstItem="hwd-iO-bmc" firstAttribute="top" secondItem="lbI-dS-85o" secondAttribute="bottom" constant="20" id="Fem-FN-UPX"/>
                            <constraint firstItem="hwd-iO-bmc" firstAttribute="leading" secondItem="6Lr-2V-zH3" secondAttribute="leading" constant="59" id="In5-NW-kve"/>
                            <constraint firstItem="6Lr-2V-zH3" firstAttribute="trailing" secondItem="U2H-sQ-2is" secondAttribute="trailing" constant="60" id="SqC-yl-LZH"/>
                            <constraint firstItem="U2H-sQ-2is" firstAttribute="leading" secondItem="6Lr-2V-zH3" secondAttribute="leading" constant="59" id="T6r-2F-LJa"/>
                            <constraint firstItem="6Lr-2V-zH3" firstAttribute="trailing" secondItem="lbI-dS-85o" secondAttribute="trailing" constant="192" id="T8q-Pl-EDC"/>
                            <constraint firstItem="6Lr-2V-zH3" firstAttribute="trailing" secondItem="mpT-rl-DBU" secondAttribute="trailing" constant="16" id="inu-ey-SW8"/>
                            <constraint firstItem="lbI-dS-85o" firstAttribute="top" secondItem="6Lr-2V-zH3" secondAttribute="top" id="lTn-L5-VZk"/>
                            <constraint firstItem="3RN-gd-uMy" firstAttribute="leading" secondItem="6Lr-2V-zH3" secondAttribute="leading" constant="59" id="mLL-Dc-hgj"/>
                            <constraint firstItem="mpT-rl-DBU" firstAttribute="top" secondItem="U2H-sQ-2is" secondAttribute="bottom" constant="35" id="nxb-wb-Nat"/>
                            <constraint firstItem="mpT-rl-DBU" firstAttribute="leading" secondItem="6Lr-2V-zH3" secondAttribute="leading" constant="16" id="ox2-6D-bxc"/>
                            <constraint firstItem="6Lr-2V-zH3" firstAttribute="trailing" secondItem="3RN-gd-uMy" secondAttribute="trailing" constant="60" id="pFO-bS-sYe"/>
                            <constraint firstItem="6Lr-2V-zH3" firstAttribute="trailing" secondItem="hwd-iO-bmc" secondAttribute="trailing" constant="60" id="qp1-q7-Ez3"/>
                            <constraint firstItem="lbI-dS-85o" firstAttribute="leading" secondItem="6Lr-2V-zH3" secondAttribute="leading" constant="16" id="zps-NL-HDR"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Lr-2V-zH3"/>
                    </view>
                    <connections>
                        <outlet property="deathDateLabel" destination="U2H-sQ-2is" id="Wfp-0c-12S"/>
                        <outlet property="firstNameLabel" destination="hwd-iO-bmc" id="A7K-Pb-sVO"/>
                        <outlet property="lastNameLabel" destination="3RN-gd-uMy" id="inw-0g-i7v"/>
                        <outlet property="profilePicture" destination="lbI-dS-85o" id="QBf-Ou-xAw"/>
                        <outlet property="reasonLabel" destination="mpT-rl-DBU" id="hzf-n7-cy6"/>
                        <segue destination="r40-gf-QIS" kind="presentation" identifier="toHome" id="hfq-Oi-50v"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="0Ox-C0-nxu" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="132" y="163.26836581709148"/>
        </scene>
        <!--ListOfDeath-->
        <scene sceneID="1pA-kj-4TR">
            <objects>
                <viewControllerPlaceholder storyboardName="ListOfDeath" id="r40-gf-QIS" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="BZS-9G-fWM" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="888" y="175"/>
        </scene>
    </scenes>
    <resources>
        <image name="defaultImage" width="800" height="800"/>
    </resources>
</document>
